--- a/CMD.html
+++ b/CMD.html
@@ -19,11 +19,11 @@
 	</style>
     <nav>
         <ul>
-            <li><button><a id="botao" href="index.html" onclick="toggleContent('index')">Home</a></button></li>
-            <li><button><a id="botao" href="Extensao.html" onclick="toggleContent('Extensao')">EXTENSÕES_web</a></button></li>
-            <li><button><a id="botao" href="programas.html" onclick="toggleContent('programas')">PROGRAMAS</a></button></li>
-            <li><button><a id="botao" href="ativador_windows.html" onclick="toggleContent('ativador_windows')">ATIVADOR_windows</a></button></li>
-            <li><button><a id="botao" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
+            <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')">Home</a></button></li>
+            <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')">EXTENSÕES_web</a></button></li>
+            <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')">PROGRAMAS</a></button></li>
+            <li><button><a id="botao" target="_self" href="ativador_windows.html" onclick="toggleContent('ativador_windows')">ATIVADOR_windows</a></button></li>
+            <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
         </ul>
     </nav>
     <article>
