--- a/programas.html
+++ b/programas.html
@@ -17,17 +17,17 @@
 	</style>
     <nav>
         <ul>
-            <li><button><a id="botao" href="index.html" onclick="toggleContent('index')">Home</a></button></li>
-            <li><button><a id="botao" href="Extensao.html" onclick="toggleContent('Extensao')">EXTENSÕES_web</a></button></li>
-            <li><button><a id="botao" href="programas.html" onclick="toggleContent('programas')">PROGRAMAS</a></button></li>
-            <li><button><a id="botao" href="ativador_windows.html" onclick="toggleContent('ativador_windows')">ATIVADOR_windows</a></button></li>
-            <li><button><a id="botao" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
+            <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')">Home</a></button></li>
+            <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')">EXTENSÕES_web</a></button></li>
+            <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')">PROGRAMAS</a></button></li>
+            <li><button><a id="botao" target="_self" href="ativador_windows.html" onclick="toggleContent('ativador_windows')">ATIVADOR_windows</a></button></li>
+            <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
         </ul>
     </nav>
 
     <div id="pp">
         <ul id="lista">
-           <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
+            <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
             <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
             <li id="programa"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
             <li id="programa"><a class="lcor" href="Coreldraw2023.zip" download="_blank">&#x1F60E CorelDraw</li></a>
