--- a/programas.html
+++ b/programas.html
@@ -24,20 +24,21 @@
             <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
         </ul>
     </nav>
-
-    <div id="pp">
-        <ul id="lista">
-            <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
-            <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
-            <li id="programa"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
-            <li id="programa"><a class="lcor" href="Coreldraw2023.zip" download="_blank">&#x1F60E CorelDraw</li></a>
-            <li id="programa"><a class="lcor" href="Wondershare Filmora 13.0 .zip" download="_blank">&#x1F60E Filmora - Editor de Video</li></a>
-            <li id="programa" class="lado"><a class="lcor" href="3DP_Net_v2101.zip" download="_blank">&#x1F60E 3DP NET</li></a>
-            <li class="lado"><a id="cor"> ( DRIVER DE Wi - Fi )</a></li>
-            <li id="programa"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>
-            <li id="programa" class="lado"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9">&#x1F60E WinRAR</li></a>
-            <li class="lado"><a id="cor" href="Boleto Madeus.pdf" download="_blank"> ( ATIVADOR DO WINRAR )</a></li>
-        </ul>
-    </div>
+    <section id="pai">
+        <div id="pp">
+            <ul id="lista">
+                <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
+                <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
+                <li id="programa"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
+                <li id="programa"><a class="lcor" href="Coreldraw2023.zip" download="_blank">&#x1F60E CorelDraw</li></a>
+                <li id="programa"><a class="lcor" href="Wondershare Filmora 13.0 .zip" download="_blank">&#x1F60E Filmora - Editor de Video</li></a>
+                <li id="programa" class="lado"><a class="lcor" href="3DP_Net_v2101.zip" download="_blank">&#x1F60E 3DP NET</li></a>
+                <li class="lado"><a id="cor"> ( DRIVER DE Wi - Fi )</a></li>
+                <li id="programa"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>
+                <li id="programa" class="lado"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9">&#x1F60E WinRAR</li></a>
+                <li class="lado"><a id="cor" href="Boleto Madeus.pdf" download="_blank"> ( ATIVADOR DO WINRAR )</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
