--- a/Extensao.html
+++ b/Extensao.html
@@ -37,7 +37,7 @@
           8*.. Wappalyzer <a href="https://chromewebstore.google.com/detail/wappalyzer-technology-pro/gppongmhjkpfnbhagpmjfkannfbllamg?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
           9*.. vidIQ Vision for YouTube <a href="https://chromewebstore.google.com/detail/vidiq-vision-for-youtube/pachckjkecffpdphbpmfolblodfkgbhl?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
           10*.. Web Developer <a href="https://chromewebstore.google.com/detail/web-developer/bfbameneiokkgbdmiekhjnmfkcnldhhm?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
-          11*.. descarregador de vídeo - CocoCut <a href="https://microsoftedge.microsoft.com/addons/detail/descarregador-de-v%C3%ADdeo-/npdhgjfiikhgncaacnnodpfchmelnchm" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
+          11*.. descarregador de vídeo - CocoCut <a href="https://cococut.net/" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
           12*.. Monitor de Conexão à Internet - Extensao Google_Chrome <a href="https://chromewebstore.google.com/detail/monitor-de-conex%C3%A3o-%C3%A0-inte/hgccfdagfbilbdbkgmfdmmdfmjjoakfo?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
         </fieldset>
       </article>
