--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Responsivo</title>
+    <title>Site Dsousa</title>
+    <link rel="stylesheet" favicon="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="Extensao.html">
     <link rel="stylesheet" href="programas.html">
