--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Dsousa</title>
-    <link href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="Extensao.html">
     <link rel="stylesheet" href="programas.html">
