--- a/Extensao.html
+++ b/Extensao.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXTENSÕES PARA NAVEGADORES_web</title>
+    <title>Dsousa: EXTENSÕES</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="Extensao.html">
     <link rel="stylesheet" href="programas.html">
