--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Dsousa</title>
+    <title>Dsousa</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="Extensao.html">
