--- a/programas.html
+++ b/programas.html
@@ -29,6 +29,8 @@
         <div id="pp">
             <ul id="lista">
                 <li id="programa"><a class="lcor" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">&#x1F60E Google Chrome</li></a>
+                <li id="programa" class="lado"><a class="lcor" href="https://www.pingplotter.com/download/" target="_blank">&#x1F60E PINGplotter</li></a>
+                <li class="lado"><a id="corr"> ( Medidor de Rotas IPS )</a></li>
                 <li id="programa"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - Medir velocidade de SSD, HD</li></a>
                 <li id="programa"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>
                 <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
