--- a/CMD.html
+++ b/CMD.html
@@ -39,6 +39,18 @@
 		</fieldset>
 	</article>
 	<BR><BR>
+	<article>
+		<fieldset>
+			<legend>COMANDO CMD QUE EXCLUI TODAS AS INFORMACOES DE QUALQUER EQUIPAMENTO</legend><br>
+			<H1><bold style="color: rgb(240, 9, 163);">Exemplo:</bold> quando vc exclui arquivo ou formata o pendrive mas depois quer restaurar os arquivos apagados</H1>
+			1*.. ABRA O CMD<br><br>
+			2*.. DIGITE <mark>CIPHER /W:F:</mark><br><br><br>
+			3*.. NO LUGAR DO <MARK>F</MARK> DO COMANDO VOCE VAI COLOCAR A LETRA DA UNIDADE QUE VOCE PRETENDE EXCLUIR OS DADOS PRA NAO SEREM RESTAURADOS<br><br><br>
+			4*.. APERTA <MARK>ENTER</MARK> E ESPERA CONCLUIR O PROCESSO
+			
+		</fieldset>
+	</article>
+	<BR><BR>
   <article>
 		<fieldset>
 			<legend>COMANDO CMD FORMATAR QUALQUER DISCO</legend><br>
