--- a/Extensao.html
+++ b/Extensao.html
@@ -15,13 +15,14 @@
 	<style>
 		
 	</style>
-    <nav>
+      <nav>
         <ul>
-			<li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')">Home</a></button></li>
-            <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')">EXTENSÕES_web</a></button></li>
-            <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')">PROGRAMAS</a></button></li>
-            <li><button><a id="botao" target="_self" href="ativador_windows.html" onclick="toggleContent('ativador_windows')">ATIVADOR_windows</a></button></li>
-            <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')">CMD</a></button></li>
+            <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')" >Home</a></button></li>
+            <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')" >EXTENSÕES_web</a></button></li>
+            <li><button><a id="botao" target="_self" href="instalacao sem a conta da Microsoft.html" onclick="toggleContent('microsoft')" >Sem a Conta da Microsoft</a></button></li>
+            <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')" >PROGRAMAS</a></button></li>
+            <li><button><a id="botao" target="_self" href="ativador_windows.html" onclick="toggleContent('ativador_windows')" >ATIVADOR_windows</a></button></li>
+            <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')" >CMD</a></button></li>
         </ul>
     </nav>
 
