--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')" >Home</a></button></li>
             <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')" >EXTENSÕES_web</a></button></li>
+            <li><button><a id="botao" target="_self" href="instalacao sem a conta da Microsoft.html" onclick="toggleContent('microsoft')" >Sem a Conta da Microsoft</a></button></li>
             <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')" >PROGRAMAS</a></button></li>
             <li><button><a id="botao" target="_self" href="ativador_windows.html" onclick="toggleContent('ativador_windows')" >ATIVADOR_windows</a></button></li>
             <li><button><a id="botao" target="_self" href="CMD.html" onclick="toggleContent('CMD')" >CMD</a></button></li>
@@ -36,6 +37,16 @@
         </div>
       </div>
     
+      <div class="container">
+        <div class="note">
+          <h1>GOOGLE CHROME</h1>
+          <p id="chrom">chrome://flags/#enable-parallel-downloading </p>
+          <h5> Habilite o comando >> Parallel downloading</h5>
+          <a href="https://www.freedownloadmanager.org/pt/" target="_blank"> FREE DOWNLOAD MANAGER</a>
+          <a href="https://chrome.google.com/webstore/detail/free-download-manager/ahmpjcflkgiildlgicmcieglgoilbfdp" target="_blank"> Extensao Free download manager Chrome </a>
+        </div>
+      </div>
+
       <div class="container">
         <div class="note">
           <h1>Send-anywhere</h1>
