--- a/programas.html
+++ b/programas.html
@@ -42,7 +42,7 @@
                 <li class="lado"><a id="corr"> ( DRIVER DE Wi - Fi )</a></li>
                 <li id="programa"><a class="lcor" href="https://pdf.wondershare.com/pdf-reader.html?utm_source=youtube&utm_medium=influencer&utm_campaign=20240510hzzpe1xerifetech&utm_term=xerifetech&utm_content=pe_en_20034389_video" download="_blank" target="_blank">&#x1F60E PDF-reader</li></a>
                 <li id="programa" class="lado"><a class="lcor" href="https://www.win-rar.com/start.html?&L=9" target="_blank">&#x1F60E WinRAR</li></a>
-                <li class="lado"><a id="cor" href="Boleto Madeus.pdf" download="_blank"> ( ATIVADOR DO WINRAR )</a></li>
+                <li class="lado"><a id="cor" href="rarreg.zip" download="_blank"> ( ATIVADOR DO WINRAR )</a></li>
             </ul>
         </div>
     </section>
