--- a/Extensao.html
+++ b/Extensao.html
@@ -41,6 +41,7 @@
           10*.. Web Developer <a href="https://chromewebstore.google.com/detail/web-developer/bfbameneiokkgbdmiekhjnmfkcnldhhm?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
           11*.. descarregador de vídeo - CocoCut <a href="https://cococut.net/" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
           12*.. Monitor de Conexão à Internet - Extensao Google_Chrome <a href="https://chromewebstore.google.com/detail/monitor-de-conex%C3%A3o-%C3%A0-inte/hgccfdagfbilbdbkgmfdmmdfmjjoakfo?hl=pt-BR" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
+          13*.. Buster: Solucionador de Captcha para Humanos <a href="https://chromewebstore.google.com/detail/buster-captcha-solver-for/mpbjkejclgfgadiemmefgebjfooflfhl" target="_blank"><img src="simbolo.png" id="imm"></a><br><br><br>
         </fieldset>
       </article>
 	
