--- a/CMD.html
+++ b/CMD.html
@@ -80,5 +80,23 @@
 			10*.. PRONTO<br><br><br>
 		</fieldset>
 	</article>
+	<article id="bold">
+		<fieldset>
+			<legend>BAIXAR VIDEO & AUDIO DO YOU-TUBE PELO CMD!</legend><br>
+			1*.. BAIXAR O YT-DLP > <a href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#installation">YT-DLP</a><br><br><br>
+			2*.. BAIXAR O FFmpeg > <a href="https://www.gyan.dev/ffmpeg/builds/">FFmpeg</a><br><br><br>
+			3*.. VAI NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC E CRIE UMA PASTA COM O NOME em MINUSCULO <mark>yt-dlp</mark><br><br><br>
+			4*.. MOVA O DOWNLOAD <mark style="color: brown; background: none;">YT-DLP</mark> QUE FOI BAIXADO PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
+			5*.. MOVA OS 3 ARQUIVOS DA PASTA <mark>BIN</mark> DO DOWNLOAD <mark style="color: brown; background: none;">FFmpeg</mark> PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
+			5*.. COPIA O DIRETORIO DA PASTA <mark>yt-dlp</mark> <br><br><br>
+			6*.. DIGITE NA BARRA DE PESQUISA DO WINDOWS POR <mark style="color: brown; background: none;"> VARIAVEIS DO SISTEMA</mark>, E ABRA <mark>yt-dlp</mark> <br><br><br>
+			7*.. VAI EM <mark>AVANÇADO</mark> DEPOS EM <mark>VARIAVEIS DE AMBIENTE</mark>, PROCURE A OPCAO <mark>PATH</mark><br><br><br>
+			8*.. VAI EM <mark>EDITAR</mark> DA OPCAO <mark>PATH</mark>, DEPOIS VAI EM <mark>NOVO</mark> E COLE O <mark style="color: brown; background: none;">DIRETORIO DA PASTA</mark><mark>yt-dlp</mark> SO DA OK E PRONTO<br><br><br>
+			9*.. ABRA O CMD <mark>yt-dlp</mark> <br><br><br>
+			10*.. DIGITE: <mark>yt-dlp</mark> {mas o link do video que quer baixar} <mark style="color: brown; background: none;">PRA BAIXAR O VIDEO</mark> <br><br><br>
+			11*.. DIGITE: <mark>yt-dlp -x</mark> {mas o link do video que quer baixar} <mark style="color: brown; background: none;">PRA BAIXAR SO O AUDIO DO VIDEO</mark> <br><br><br> 
+			11*.. DOWNLOAD DO VIDEO EXPLICATIVO <a href="BAIXAR vídeos do YOUTUBE.webm" download="_blank">>> VIDEO EXPLICATIVO</a>
+		</fieldset>
+	</article>
 </body>
 </html>
