--- a/CMD.html
+++ b/CMD.html
@@ -83,8 +83,8 @@
 	<article id="bold">
 		<fieldset>
 			<legend>BAIXAR VIDEO & AUDIO DO YOU-TUBE PELO CMD!</legend><br>
-			1*.. BAIXAR O YT-DLP > <a href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#installation">YT-DLP</a><br><br><br>
-			2*.. BAIXAR O FFmpeg > <a href="https://www.gyan.dev/ffmpeg/builds/">FFmpeg</a><br><br><br>
+			1*.. BAIXAR O YT-DLP > <a href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#installation" target="_blank">YT-DLP</a><br><br><br>
+			2*.. BAIXAR O FFmpeg > <a href="https://www.gyan.dev/ffmpeg/builds/" target="_blank">FFmpeg</a><br><br><br>
 			3*.. VAI NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC E CRIE UMA PASTA COM O NOME em MINUSCULO <mark>yt-dlp</mark><br><br><br>
 			4*.. MOVA O DOWNLOAD <mark style="color: brown; background: none;">YT-DLP</mark> QUE FOI BAIXADO PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
 			5*.. MOVA OS 3 ARQUIVOS DA PASTA <mark>BIN</mark> DO DOWNLOAD <mark style="color: brown; background: none;">FFmpeg</mark> PARA A PASTA CRIADA NA UNIDADE <mark style="color: brown; background: none;">C:</mark> DO PC <mark>yt-dlp</mark><br><br><br>
