--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
       <div class="container">
         <div class="note">
-          <h1>Send-anywhere</h1>
+          <h1>Pairdrop.Net</h1>
           <h5> site que Transfere arquivos do <mark>celular</mark> pro <mark>Desktop</mark> e Vice-Versa</h5>
           <h4>ABRA O SITE NO PC & NO CELULAR</h4>
-          <a href="https://send-anywhere.com/" target="_blank"> Send-anywhere</a>
+          <a href="https://pairdrop.net/" target="_blank"> Pairdrop.Net</a>
         </div>
       </div>
 
