--- a/instalacao sem a conta da Microsoft.html
+++ b/instalacao sem a conta da Microsoft.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="programas.html">
     <link rel="stylesheet" href="ativador_windows.html">
     <link rel="stylesheet" href="CMD.html">
+    <link rel="stylesheet" href="IP.html">
 </head>
 <body>
 
@@ -19,6 +20,7 @@
     <nav>
         <ul>
             <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')" >Home</a></button></li>
+            <li><button><a id="botao" target="_self" href="IP.html" onclick="toggleContent('index')" >REDES TCP/IP</a></button></li>
             <li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')" >EXTENSÕES_web</a></button></li>
             <li><button><a id="botao" target="_self" href="instalacao sem a conta da Microsoft.html" onclick="toggleContent('microsoft')" >Sem a Conta da Microsoft</a></button></li>
             <li><button><a id="botao" target="_self" href="programas.html" onclick="toggleContent('programas')" >PROGRAMAS</a></button></li>
