--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="item">
         <div class="titulo" onclick="toggleItem(this)">
           <span class="icone">＋</span>
-          Programa Otimiza o PC e Desfragmenta o SSD & HD
+          Programa Otimiza o PC e <br>Desfragmenta o SSD & HD
           <span class="icone">＋</span>
         </div>
         <div class="conteudo">
@@ -120,7 +120,7 @@
       <div class="item">
         <div class="titulo" onclick="toggleItem(this)">
           <span class="icone">＋</span>
-          Programas que faz o CPU utilzar todo seu desempeho em jogos
+          Programas que faz o CPU utilzar <br> todo seu desempeho em jogos
           <span class="icone">＋</span>
         </div>
         <div class="conteudo">
