--- a/CMD.html
+++ b/CMD.html
@@ -45,7 +45,7 @@
 	<article>
 		<fieldset>
 			<legend>COMANDO CMD QUE EXCLUI TODAS AS INFORMACOES DE QUALQUER EQUIPAMENTO</legend><br>
-			<H1><bold style="color: rgb(240, 9, 163);">Exemplo:</bold> quando vc exclui arquivo ou formata o pendrive mas depois quer restaurar os arquivos apagados</H1>
+			<H1 style="color: rgb(17, 1, 158);">Exemplo: quando vc exclui arquivo ou formata o pendrive mas depois quer restaurar os arquivos apagados</H1>
 			1*.. ABRA O CMD<br><br>
 			2*.. DIGITE <mark>CIPHER /W:F:</mark><br><br><br>
 			3*.. NO LUGAR DO <MARK>F</MARK> DO COMANDO VOCE VAI COLOCAR A LETRA DA UNIDADE QUE VOCE PRETENDE EXCLUIR OS DADOS PRA NAO SEREM RESTAURADOS<br><br><br>
@@ -56,8 +56,20 @@
 	<BR><BR>
 		<article>
 			<fieldset>
+				<legend>COMANDO CMD DESCORROMPE PASTE QUE NÃO EXCLUI DO PC </legend><br>
+				<H1 style="color: rgb(17, 1, 158);"> Excluir - Recuperar Pasta Corrompida ou Ilegível</H1> <h2 style="color: rgb(102, 3, 3);">(Arquivo Bugado, Unidade Inacessível)</h2>
+				1*.. ABRA O CMD<br><br>
+				2*.. DIGITE <strong>chkdsk C: /f /x </strong> <MARK>{Escolhe a Unidade de onde a pasta esta Corrompida, no LUGAR DA UNIDADE C:} </MARK><br><br>
+				3*.. De Enter - Espera Terminar de DESCORROMPER A PASTA<br><br>
+				4*.. PRONTO, SO VERIFICAR A PASTA<br><br>
+					
+			</fieldset>
+		</article>
+	<BR><BR>
+		<article>
+			<fieldset>
 				<legend>COMANDO CMD QUE MOSTRA a Hash de QUALQUER ARQUIVO</legend><br>
-				<H1><bold style="color: rgb(240, 9, 163);">Exemplo:</bold> COMANDO CMD QUE MOSTRA a Hash de QUALQUER ARQUIVO</H1>
+				<H1 style="color: rgb(17, 1, 158);">Exemplo: COMANDO CMD QUE MOSTRA a Hash de QUALQUER ARQUIVO</H1>
 				1*.. ABRA O CMD<br><br>
 				2*.. DIGITE <mark>CERTUTIL -HASHFILE (nome do arquivo) sha256</mark><br><br>
 				3*.. COPIA A Hash<br><br>
