--- a/CMD.html
+++ b/CMD.html
@@ -21,7 +21,7 @@
 	</style>
       <nav>
         <ul>
-            <li><button><a id="botao" target="_self" href="index.html" onclick="toggleContent('index')" >Home</a></button></li>
+            <li><button><a id="botao" target="_self" href="indexx.html" onclick="toggleContent('index')" >Home</a></button></li>
             <li><button><a id="botao" target="_self" href="IP.html" onclick="toggleContent('index')" >REDES TCP/IP</a></button></li>
 			<li><button><a id="botao" target="_self" href="Extensao.html" onclick="toggleContent('Extensao')" >EXTENSÕES_web</a></button></li>
             <li><button><a id="botao" target="_self" href="instalacao sem a conta da Microsoft.html" onclick="toggleContent('microsoft')" >Sem a Conta da Microsoft</a></button></li>
