--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dsousa</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="indexx.html">
+    <link rel="stylesheet" href="styles.css">
+	  <link rel="stylesheet" href="Extensao.html">
+    <link rel="stylesheet" href="programas.html">
+    <link rel="stylesheet" href="ativador_windows.html">
+    <link rel="stylesheet" href="CMD.html">
+    <link rel="stylesheet" href="IP.html">
+
+
   <style>
     /* From Uiverse.io by Ashon-G */
     .macbook {
