--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dsousa</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="indexx.html">
-    <link rel="stylesheet" href="styles.css">
-	  <link rel="stylesheet" href="Extensao.html">
-    <link rel="stylesheet" href="programas.html">
-    <link rel="stylesheet" href="ativador_windows.html">
-    <link rel="stylesheet" href="CMD.html">
-    <link rel="stylesheet" href="IP.html">
+   
 
 
   <style>
@@ -462,7 +456,8 @@
   </style>
 </head>
 
-<body><a href="index.html" onclick="toggleContent('index')">
+<body><a href="indexx.html" onclick="toggleContent('indexx')">
+  
   <div>
     <div class="macbook">
       <div class="inner">
