--- a/IP.html
+++ b/IP.html
@@ -46,8 +46,6 @@
       <div class="conteudo">
         <p><strong style="text-transform: uppercase;"> Conjunto de dispositivos interligados que trocam dados entre si.</strong></p>
         
-        <a id="linkdolado" href="https://www.freedownloadmanager.org/pt/" target="_blank"> FREE DOWNLOAD MANAGER</a> 
-        <a id="linkdolado" href="https://chrome.google.com/webstore/detail/free-download-manager/ahmpjcflkgiildlgicmcieglgoilbfdp" target="_blank"> Extensao Free download manager Chrome </a>
     </div>
     </div>
 
@@ -72,10 +70,10 @@
       </div>
       <div class="conteudo">
         <ul>
-            <li>Acesso à rede</li>
-            <li>Internet</li>
-            <li>Transporte</li>
-            <li>Aplicação</li>
+            <li><strong>Aplicação</strong></li><em style="color:brown">(SMTP, FTP, HTTPs, DNS...)</em>
+            <li><strong>Transporte</strong></li><em style="color:brown">(TCP, UDP)</em>
+            <li><strong>Internet</strong></li><em style="color:brown">(IP de Origem e DESTINO)</em>
+            <li><strong>Rede</strong></li><em style="color:brown">(Ethernet, WIFI, Entre Outros)</em>
         </ul>
       </div>
     </div>
