--- a/indexx.html
+++ b/indexx.html
@@ -137,8 +137,20 @@
         </div>
         <div class="conteudo">
           <p>SITE QUE CALCULA O CIDR DE UMA REDE </p>
-          <a id="linkcenter" href="https://www.site24x7.com/tools/ipv4-subnetcalculator.html" target="_blank"> 1° CIDR CALCULATOR <<</a>
-          <a id="linkcenter" href="https://www.subnet-calculator.com/cidr.php" target="_blank"> 2° ONLINE IP CIDR <<</a>
+          <a id="linkcenter" href="https://ipcalc.co/" target="_blank"> Calculadora de IP </a>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="titulo" onclick="toggleItem(this)">
+          <span class="icone">＋</span>
+            O Que é CIDR?
+          <span class="icone">＋</span>
+        </div>
+        <div class="conteudo">
+          <pre><strong style="font-size: 150%;"><em style="color: brown;">CIDR:</em> significa Classless Inter-Domain Routing</strong></pre>
+          <pre><strong style="font-size: 110%;">(ou, em português, <em style="color: brown;">"Roteamento Interdomínios Sem Classe"</em>)</strong></pre>
+            <em style="color: rgb(43, 43, 43);">Foi introduzido para substituir o antigo sistema de classes de IP (A, B, C) e permitir uma divisão mais flexível de redes IP. Como /30, /29, /28, /24.....</em>
         </div>
       </div>
 
