--- a/indexx.html
+++ b/indexx.html
@@ -147,8 +147,8 @@
             O Que é CIDR?
           <span class="icone">＋</span>
         </div>
-        <div class="conteudo">
-          <pre><strong style="font-size: 150%;"><em style="color: brown;">CIDR:</em> significa Classless Inter-Domain Routing</strong></pre>
+        <div class="conteudo"  style="overflow: scroll;">
+          <pre><strong style="font-size: 140%;"><em style="color: brown;">CIDR:</em> significa Classless Inter-Domain Routing </strong></pre>
           <pre><strong style="font-size: 110%;">(ou, em português, <em style="color: brown;">"Roteamento Interdomínios Sem Classe"</em>)</strong></pre>
             <em style="color: rgb(43, 43, 43);">Foi introduzido para substituir o antigo sistema de classes de IP (A, B, C) e permitir uma divisão mais flexível de redes IP. Como /30, /29, /28, /24.....</em>
         </div>
