--- a/CMD.html
+++ b/CMD.html
@@ -42,6 +42,20 @@
 		</fieldset>
 	</article>
 	<BR><BR>
+
+	<article>
+		<fieldset>
+			<legend>Ativar o Comando WINGET no Windows_10</legend><br>
+			<h2>Ativar o Comando WINGET no Windows_10</h2>
+			<h3 style="color: rgb(117, 0, 0);">NO S.O_11 JA VEM COM ESSA FUNÇÃO ATIVADO - SO NAS VERSOES ANTIGAS QUE PRECISA ATIVAR</h3>
+			1*.. ACESSA O LINK E INSTALE O <a href="https://encurtador.com.br/Ox2BK" target="_blank" style="color: rgb(112, 1, 75);">( Instalador de Aplicativo )</a><br><br>
+			2*.. DEPOIS DE INSTALAR O Aplicativo<br><br>
+			3*.. ABRA O CMD & DIGITA WINGET<br><br>
+			4*.. E PRONTO<br><br>
+		</fieldset>
+	</article>
+	<BR><BR>
+
 	<article>
 		<fieldset>
 			<legend>COMANDO CMD QUE EXCLUI TODAS AS INFORMACOES DE QUALQUER EQUIPAMENTO</legend><br>
@@ -56,7 +70,7 @@
 	<BR><BR>
 		<article>
 			<fieldset>
-				<legend>COMANDO CMD DESCORROMPE PASTE QUE NÃO EXCLUI DO PC </legend><br>
+				<legend>COMANDO CMD DESCORROMPE PASTA QUE NÃO EXCLUI DO PC </legend><br>
 				<H1 style="color: rgb(17, 1, 158);"> Excluir - Recuperar Pasta Corrompida ou Ilegível</H1> <h2 style="color: rgb(102, 3, 3);">(Arquivo Bugado, Unidade Inacessível)</h2>
 				1*.. ABRA O CMD<br><br>
 				2*.. DIGITE <strong>chkdsk C: /f /x </strong> <MARK>{Escolhe a Unidade de onde a pasta esta Corrompida, no LUGAR DA UNIDADE C:} </MARK><br><br>
