--- a/IP.html
+++ b/IP.html
@@ -45,9 +45,54 @@
       </div>
       <div class="conteudo">
         <p><strong style="text-transform: uppercase;"> Conjunto de dispositivos interligados que trocam dados entre si.</strong></p>
+        </div>
+    </div>
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+            Como Que Funciona o MU-MIMO
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <p id="mu-mimo"> O roteador com MU-MIMO possui várias antenas que criam fluxos de dados independentes. Ele direciona esses fluxos para diferentes dispositivos compatíveis com MU-MIMO ao mesmo tempo. (5Ghz, 6Ghz...) </p>
+        <h4>Exemplo:</h4>
+        <p id="mu-mimo" style="color: rgb(138, 0, 0);">Um roteador com <em id="destaque_mu-mimo"><strong> 4 antenas</strong></em> e suporte a <em id="destaque_mu-mimo"><strong>4x4 MU-MIMO</strong></em> pode atender até <em id="destaque_mu-mimo"><strong>4 dispositivos simultaneamente,</strong></em> cada um com seu fluxo de dados.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+            Como Que Funciona o OFDMA
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <p id="mu-mimo"> No Wi-Fi tradicional <strong>(sem OFDMA),</strong>  cada carro <strong>(dispositivo)</strong> precisa esperar sua vez para usar a estrada toda — isso cria <b style="color: rgb(230, 3, 211);">congestionamento.</b></p>
+        <p id="mu-mimo"><strong>Com OFDMA,</strong> a rodovia é dividida em várias faixas menores <strong>(chamadas subportadoras),</strong> e vários carros podem trafegar ao mesmo tempo, cada um em sua faixa.</p>
         
+      </div>
     </div>
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+            Exemplo Sobre o Beamforming
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <p id="mu-mimo"><strong>Com beamforming,</strong> o roteador concentra o sinal em direção ao seu <strong>celular, notebook ou TV, aumentando </strong></p>
+        <ul>
+          <li>Força do Sinal</li>
+          <li>Velocidade da Conexão</li>
+          <li>Estabilidade, Especialmente em áreas mais Distantes do Roteador</li>
+        </ul>
+        <h4>Existem dois tipos</h4>
+        <p id="mu-mimo"><b>Beamforming implícito:</b> funciona mesmo se o dispositivo não tiver suporte.</p>
+        <p id="mu-mimo"><b>Beamforming explícito:</b> mais preciso, mas requer suporte no dispositivo e no roteador.</p>
+      </div>
     </div>
+
 
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
