--- a/IP.html
+++ b/IP.html
@@ -80,7 +80,8 @@
             Exemplo Sobre o Beamforming
         <span class="icone">＋</span>
       </div>
-      <div class="conteudo">
+
+      <div class="conteudo" style="overflow:auto">
         <p id="mu-mimo"><strong>Com beamforming,</strong> o roteador concentra o sinal em direção ao seu <strong>celular, notebook ou TV, aumentando </strong></p>
         <ul>
           <li>Força do Sinal</li>
@@ -93,6 +94,21 @@
       </div>
     </div>
 
+    <div class="item" style="overflow: auto;">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+            Como funciona TWT
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <p id="mu-mimo"><strong>O TWT </strong>  permite que o roteador e o dispositivo agendem momentos específicos para se comunicar. Assim, o dispositivo pode "dormir" (ficar inativo) a maior parte do tempo e "acordar" apenas quando for necessário transmitir ou receber dados.</p>
+        <h4>O que é o TWT (Target Wake Time)</h4>
+        <ul>
+          <li>É uma tecnologia que ajuda a economizar energia, especialmente para dispositivos que não precisam estar sempre conectados, como sensores IoT, smartphones, notebooks em modo de espera etc.</li>
+
+        </ul>
+      </div>
+    </div>
 
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
