--- a/CMD.html
+++ b/CMD.html
@@ -45,6 +45,22 @@
 
 	<article>
 		<fieldset>
+			<legend>COMANDO CMD FAZ TESTE DE VELOCIDADE USANDO O SPEEDTEST</legend><br>
+			1*.. ACESSE O SITE >> <a href="https://www.speedtest.net/apps/cli" target="_blank" style="color: rgb(94, 0, 86);">SPEEDTEST CLI</a> e Baixar o Programa pro Teu WINDOWS<br><br>
+			2*.. DEPOIS EXTRAIA A PASTA <B>COPIA OS 2 ARQUIVOS</B> QUE ESTA DENTRO DA PASTA<br><br>
+			3*.. VAI NA UNIDADE <em style="color: rgb(107, 8, 8);" >C: DO TEU EXPLORADOR DE ARQUIVO</em><br><br>
+			4*.. DEPOIS VAI EM <b>WINDOWS</b> e COLE OS <b>2 ARQUIVOS</b> QUE FOI COPIADO DA PASTA <b>SPEEDTEST CLI</b><br><br>
+			5*.. SE PEDIR PRA <b>SUBSTITUIR</b> SO SUBSTITUIR<br><br>
+			6*.. PRONTO - SO TESTAR<br><br>
+			7*.. ABRA O CMD<br><br>
+			8*.. DIGITE <b>SPEEDTEST --SERVER-ID=53658</b> <em style="color: rgb(85, 0, 223);" >(ESSE ID E DO ISP ZUM-TELECOM)</em><br><br>
+			9*.. SO DA <em style="color: rgb(85, 0, 223);" >ENTER</em> QUE JA VAI SER TESTADO<br><br>
+		</fieldset>
+	</article>
+	<BR><BR>
+
+	<article>
+		<fieldset>
 			<legend>Ativar o Comando WINGET no Windows_10</legend><br>
 			<h2>Ativar o Comando WINGET no Windows_10</h2>
 			<h3 style="color: rgb(117, 0, 0);">NO S.O_11 JA VEM COM ESSA FUNÇÃO ATIVADO - SO NAS VERSOES ANTIGAS QUE PRECISA ATIVAR</h3>
