--- a/IP.html
+++ b/IP.html
@@ -48,6 +48,29 @@
         </div>
     </div>
 
+    <div class="item" style="overflow: auto;">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
+            LIBERAR 100% DA INTERNET DO WINDOWS
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <h4>DIGITE NA BARRA DE PESQUISAR DO WINDOWS</h4>
+        <ol style="color: black;">
+          <li><b>EDITAR POLITICA DE GRUPO</b></li>
+          <li><b>MODELOS ADMINISTRATIVOS</b></li>
+          <li><b>REDE</b></li>
+          <li><b>AGENDADOR DE PACOTES QoS</b></li>
+          <li>VAI AO LADO EM <b>LIMITAR LARGURA DE BANDA RESERVÁVEL</b></li>
+          <li>CLICA COM O <b>BOTAO DIREITO DO MOUSE</b> E VAI EM <b>EDITAR</b></li>
+          <li>MARCA A OPÇÃO <b>HABILITADO</b></li>
+          <li>COLOCA <b>ZERO</b> NO LIMITE DE LARGURA DE BANDA</li>
+          <li>E SO APLICAR E DA OK</li>
+          <li>PRONTO SO TESTAR</li>
+        </ol>
+        </div>
+    </div>
+
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
         <span class="icone">＋</span>
