--- a/IP.html
+++ b/IP.html
@@ -74,6 +74,19 @@
     <div class="item">
       <div class="titulo" onclick="toggleItem(this)">
         <span class="icone">＋</span>
+            Como Que Funciona o BSS Coloring
+        <span class="icone">＋</span>
+      </div>
+      <div class="conteudo">
+        <p id="mu-mimo">  é uma <b>tecnologia</b> introduzida no <b>Wi-Fi 6 (802.11ax)</b> que permite a identificação e diferenciação de redes Wi-Fi <b>(Basic Service Sets - BSS)</b> que operam no mesmo canal, evitando interferências e melhorando a eficiência da rede em ambientes com muitas redes Wi-Fi próximas.  </p>
+        
+      </div>
+    </div>
+
+
+    <div class="item">
+      <div class="titulo" onclick="toggleItem(this)">
+        <span class="icone">＋</span>
             Como Que Funciona o MU-MIMO
         <span class="icone">＋</span>
       </div>
