--- a/programas.html
+++ b/programas.html
@@ -36,7 +36,12 @@
                 <li class="lado"><a id="corr"> ( Medidor de Rotas IPS )</a></li>
                 <li id="programa"><a class="lcor" href="https://crystalmark.info/en/download/" target="_blank">&#x1F60E CrystalDiskMark - Medir velocidade de SSD, HD</li></a>
                 <li id="programa" class="lado"><a class="lcor" href="https://br.easeus.com/data-recovery-software/data-recovery-wizard-free.html?utm_source=mestresdainformatica&utm_medium=youtubevideo&utm_campaign=chris-202405-drw-ful" target="_blank">&#x1F60E EaseUS Data Recovery Wizard</li></a>
-                <li class="lado"><a id="corr"> ( Recuperador de Arquivos apagados )</a></li>
+                <li class="lado"><a id="corr"> ( Recuperador de Arquivos apagados ) <strong style="color: brown;">(PAGO)</strong></a></li><br>
+            
+                <li id="programa" class="lado"><a class="lcor" href="https://encurtador.com.br/Jsuze" target="_blank">&#x1F60E  EaseUS Partition Master</li></a>
+                <li class="lado"><a id="cor"> ( REMOVE SENHA DE LOGIN DO WINDOWS )</a></li><br>
+
+                <li id="programa" class="lado"><a class="lcor" href="https://www.ventoy.net/en/download.html" target="_blank">&#x1F60E MULTIBOOT - VENTOY</li></a>
                 <li id="programa"><a class="lcor" href="chroma MOUSE.zip" target="_blank" download="_blank">&#x1F60E Muda Seta do MOUSE</li></a>
                 <li id="programa"><a class="lcor" href="https://www.gimp.org/" target="_blank">&#x1F60E Gimp</li></a>
                 <li id="programa"><a class="lcor" href="https://pt-br.libreoffice.org/" target="_blank">&#x1F60E LibreOffice</li></a>
